# anjuman-backend

./: .env  .gitignore  ARCHITECTURE.md  Cargo.toml  api.yaml  flake.nix  nohup.out  platform.db  platform.db-shm  platform.db-wal  platform.db.backup  platform.db.bak
migrations/: 20260625232405_create_schema.sql  20260711000000_revoked_tokens.sql  20260713000000_user_names.sql  20260714000000_deck_classes.sql  20260719000000_custom_note_types.sql  20260720000000_card_decks.sql
src/: app.rs  auth.rs  db.rs  main.rs  note_types.rs  routes.rs  state.rs
src/auth/: jwt.rs  middleware.rs
src/handlers/: admin_users.rs  analytics.rs  card_browser.rs  classes.rs  dashboard.rs  decks.rs  health.rs  login.rs  logout.rs  me.rs  note_types_handler.rs  notes.rs  reviews.rs  search_users.rs  study.rs  users.rs
