[package]
name = "anki_classroom"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "migrate"
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tower-http = { version = "0.6", features = ["trace"] }

tracing = "0.1"
tracing-subscriber = "0.3"

dotenvy = "0.15"

argon2 = "0.5"
password-hash = { version = "0.5", features = ["rand_core", "getrandom"] }

jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
uuid = { version = "1", features = ["v4"] }
fsrs = "6.6"
